# Culebra

./: .gitignore  Cargo.toml  README.md  docs.md
culebra-templates/abi/: direct-push-no-writeback.yaml  enum-payload-slot-undercount.yaml  function-pointer-null-call.yaml  large-struct-by-value.yaml  list-element-size-undercount.yaml  missing-byval-large-struct.yaml  return-type-divergence.yaml  sret-input-output-alias.yaml  sret-zeroinitializer-return.yaml  struct-layout-mismatch.yaml  tagged-pointer-odd-address.yaml  unaligned-string-constant.yaml
culebra-templates/binary/: missing-symbol.yaml  odd-address-rodata.yaml
culebra-templates/bootstrap/: body-size-shrinkage.yaml  call-count-divergence.yaml  fixed-point-delta.yaml  function-count-drop.yaml  scope-define-noop.yaml  stage-output-divergence.yaml
culebra-templates/c/: buffer-overflow-pattern.yaml  free-without-lock.yaml  goto-dead-label.yaml  large-struct-by-value.yaml  memcpy-size-mismatch.yaml  missing-return.yaml  missing-typedef.yaml  non-atomic-shared-global.yaml  null-deref-pattern.yaml  switch-no-break.yaml  syscall-in-hot-path.yaml  union-tag-mismatch.yaml
culebra-templates/ir/: break-inside-nested-control.yaml  byte-count-mismatch.yaml  dead-phi-chain.yaml  dropped-else-branch.yaml  duplicate-block-label.yaml  dynamic-alloca-non-entry.yaml  empty-switch-body.yaml  field-index-always-zero.yaml  insertvalue-type-disagree.yaml  internal-linkage-dce.yaml  loop-counter-no-exit.yaml  (+16 more)
docs/: README.es.md  README.pt.md  README.zh-CN.md
playground/: README.md
src/: c_parser.rs  ir.rs  main.rs
(+68 files in other folders)
