[package]
name = "culebra"
version = "0.6.0"
edition = "2021"
authors = ["Juan Denis <juan@vene.co>"]
description = "Compiler forge — ABI, IR, binary, and bootstrap diagnostics for self-hosting compilers"
license = "MIT"
repository = "https://github.com/Mapanare-Research/Culebra"
keywords = ["compiler", "llvm", "debugging", "self-hosting", "abi"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
glob = "0.3"
toml = "0.8"
goblin = "0.9"
memmap2 = "0.9"
notify = "7"
sha2 = "0.10"
serde_yaml = "0.9"

[profile.release]
lto = true
strip = true
